@@ -45,169 +45,169 @@ __RCSID("$NetBSD: words.c,v 1.6 1997/10/11 02:07:39 lukem Exp $");
 #include "extern.h"
 
 struct wlist wlist[] = {
-	{"knife", KNIFE, OBJECT},
-	{"sword", SWORD, NOUNS},
-	{"scabbard", SWORD, OBJECT},
-	{"fine", SWORD, OBJECT},
-	{"two-handed", TWO_HANDED, OBJECT},
-	{"cleaver", CLEAVER, OBJECT},
-	{"broadsword", BROAD, OBJECT},
-	{"mail", MAIL, OBJECT},
-	{"coat", MAIL, OBJECT},
-	{"helmet", HELM, OBJECT},
-	{"shield", SHIELD, OBJECT},
-	{"maid", MAID, OBJECT},
-	{"maid's", MAID, OBJECT},
-	{"body", BODY, NOUNS},
-	{"viper", VIPER, OBJECT},
-	{"lamp", LAMPON, OBJECT},
-	{"lantern", LAMPON, OBJECT},
-	{"shoes", SHOES, OBJECT},
-	{"pajamas", PAJAMAS, OBJECT},
-	{"robe", ROBE, OBJECT},
-	{"amulet", AMULET, NOUNS},
-	{"medallion", MEDALION, NOUNS},
-	{"talisman", TALISMAN, NOUNS},
-	{"woodsman", DEADWOOD, OBJECT},
-	{"woodsman's", DEADWOOD, OBJECT},
-	{"mallet", MALLET, OBJECT},
-	{"laser", LASER, OBJECT},
-	{"pistol", LASER, OBJECT},
-	{"blaster", LASER, OBJECT},
-	{"gun", LASER, OBJECT},
-	{"goddess", NORMGOD, NOUNS},
-	{"grenade", GRENADE, OBJECT},
-	{"chain", CHAIN, OBJECT},
-	{"rope", ROPE, OBJECT},
-	{"levis", LEVIS, OBJECT},
-	{"pants", LEVIS, OBJECT},
-	{"mace", MACE, OBJECT},
-	{"shovel", SHOVEL, OBJECT},
-	{"halberd", HALBERD, OBJECT},
-	{"compass", COMPASS, OBJECT},
-	{"elf", ELF, OBJECT},
-	{"coins", COINS, OBJECT},
-	{"matches", MATCHES, OBJECT},
-	{"match", MATCHES, OBJECT},
-	{"book", MATCHES, OBJECT},
-	{"man", MAN, NOUNS},
-	{"papayas", PAPAYAS, OBJECT},
-	{"pineapple", PINEAPPLE, OBJECT},
-	{"kiwi", KIWI, OBJECT},
-	{"coconuts", COCONUTS, OBJECT},
-	{"mango", MANGO, OBJECT},
-	{"ring", RING, OBJECT},
-	{"potion", POTION, OBJECT},
-	{"bracelet", BRACELET, OBJECT},
-	{"timer", TIMER, NOUNS},
-	{"bomb", BOMB, OBJECT},
-	{"warhead", BOMB, OBJECT},
-	{"girl", NATIVE, NOUNS},
-	{"native", NATIVE, NOUNS},
-	{"horse", HORSE, OBJECT},
-	{"stallion", HORSE, OBJECT},
-	{"car", CAR, OBJECT},
-	{"volare", CAR, OBJECT},
-	{"pot", POT, OBJECT},
-	{"jewels", POT, OBJECT},
-	{"bar", BAR, OBJECT},
-	{"diamond", BLOCK, OBJECT},
-	{"block", BLOCK, OBJECT},
-	{"up", UP, VERB},
-	{"u", UP, VERB},
-	{"down", DOWN, VERB},
-	{"d", DOWN, VERB},
-	{"ahead", AHEAD, VERB},
-	{"a", AHEAD, VERB},
-	{"back", BACK, VERB},
-	{"b", BACK, VERB},
-	{"right", RIGHT, VERB},
-	{"r", RIGHT, VERB},
-	{"left", LEFT, VERB},
-	{"l", LEFT, VERB},
-	{"take", TAKE, VERB},
-	{"get", TAKE, VERB},
-	{"use", USE, VERB},
-	{"look", LOOK, VERB},
-	{"lo", LOOK, VERB},
-	{"quit", QUIT, VERB},
-	{"q", QUIT, VERB},
-	{"su", SU, VERB},
-	{"drop", DROP, VERB},
-	{"draw", DRAW, VERB},
-	{"pull", DRAW, VERB},
-	{"carry", DRAW, VERB},
-	{"wear", WEARIT, VERB},
-	{"sheathe", WEARIT, VERB},
-	{"put", PUT, VERB},
-	{"buckle", PUT, VERB},
-	{"strap", PUT, VERB},
-	{"tie", PUT, VERB},
-	{"inven", INVEN, VERB},
-	{"i", INVEN, VERB},
-	{"everything", EVERYTHING, OBJECT},
-	{"all", EVERYTHING, OBJECT},
-	{"and", AND, CONJ},
-	{"kill", KILL, VERB},
-	{"fight", KILL, VERB},
-	{"ravage", RAVAGE, VERB},
-	{"rape", RAVAGE, VERB},
-	{"undress", UNDRESS, VERB},
-	{"throw", THROW, VERB},
-	{"launch", LAUNCH, VERB},
-	{"land", LANDIT, VERB},
-	{"light", LIGHT, VERB},
-	{"strike", LIGHT, VERB},
-	{"follow", FOLLOW, VERB},
-	{"chase", FOLLOW, VERB},
-	{"kiss", KISS, VERB},
-	{"love", LOVE, VERB},
-	{"fuck", LOVE, VERB},
-	{"give", GIVE, VERB},
-	{"smite", SMITE, VERB},
-	{"attack", SMITE, VERB},
-	{"swing", SMITE, VERB},
-	{"stab", SMITE, VERB},
-	{"slice", SMITE, VERB},
-	{"cut", SMITE, VERB},
-	{"hack", SMITE, VERB},
-	{"shoot", SHOOT, VERB},
-	{"blast", SHOOT, VERB},
-	{"on", ON, PREPS},
-	{"off", OFF, PREPS},
-	{"time", TIME, VERB},
-	{"sleep", SLEEP, VERB},
-	{"dig", DIG, VERB},
-	{"eat", EAT, VERB},
-	{"swim", SWIM, VERB},
-	{"drink", DRINK, VERB},
-	{"door", DOOR, NOUNS},
-	{"save", SAVE, VERB},
-	{"ride", RIDE, VERB},
-	{"mount", RIDE, VERB},
-	{"drive", DRIVE, VERB},
-	{"start", DRIVE, VERB},
-	{"score", SCORE, VERB},
-	{"points", SCORE, VERB},
-	{"bury", BURY, VERB},
-	{"jump", JUMP, VERB},
-	{"kick", KICK, VERB},
-	{"kerosene", 0, ADJS},
-	{"plumed", 0, ADJS},
-	{"ancient", 0, ADJS},
-	{"golden", 0, ADJS},
-	{"gold", 0, ADJS},
-	{"ostrich", 0, ADJS},
-	{"rusty", 0, ADJS},
-	{"old", 0, ADJS},
-	{"dented", 0, ADJS},
-	{"blue", 0, ADJS},
-	{"purple", 0, ADJS},
-	{"kingly", 0, ADJS},
-	{"the", 0, ADJS},
-	{"climb", 0, ADJS},
-	{"move", 0, ADJS},
-	{"make", 0, ADJS},
-	{"to", 0, ADJS},
-	{0}
+	{ "knife",	KNIFE,		OBJECT, NULL },
+	{ "sword",	SWORD,		NOUNS, NULL },
+	{ "scabbard",	SWORD,		OBJECT, NULL },
+	{ "fine",	SWORD,		OBJECT, NULL },
+	{ "two-handed",	TWO_HANDED,	OBJECT, NULL },
+	{ "cleaver",	CLEAVER,	OBJECT, NULL },
+	{ "broadsword",	BROAD,		OBJECT, NULL },
+	{ "mail",	MAIL,		OBJECT, NULL },
+	{ "coat",	MAIL,		OBJECT, NULL },
+	{ "helmet",	HELM,		OBJECT, NULL },
+	{ "shield",	SHIELD,		OBJECT, NULL },
+	{ "maid",	MAID,		OBJECT, NULL },
+	{ "maid's",	MAID,		OBJECT, NULL },
+	{ "body",	BODY,		NOUNS, NULL },
+	{ "viper",	VIPER,		OBJECT, NULL },
+	{ "lamp",	LAMPON,		OBJECT, NULL },
+	{ "lantern",	LAMPON,		OBJECT, NULL },
+	{ "shoes",	SHOES,		OBJECT, NULL },
+	{ "pajamas",	PAJAMAS,	OBJECT, NULL },
+	{ "robe",	ROBE,		OBJECT, NULL },
+	{ "amulet",	AMULET,		NOUNS, NULL },
+	{ "medallion",	MEDALION,	NOUNS, NULL },
+	{ "talisman",	TALISMAN,	NOUNS, NULL },
+	{ "woodsman",	DEADWOOD,	OBJECT, NULL },
+	{ "woodsman's",	DEADWOOD,	OBJECT, NULL },
+	{ "mallet",	MALLET,		OBJECT, NULL },
+	{ "laser",	LASER,		OBJECT, NULL },
+	{ "pistol",	LASER,		OBJECT, NULL },
+	{ "blaster",	LASER,		OBJECT, NULL },
+	{ "gun",	LASER,		OBJECT, NULL },
+	{ "goddess",	NORMGOD,	NOUNS, NULL },
+	{ "grenade",	GRENADE,	OBJECT, NULL },
+	{ "chain",	CHAIN,		OBJECT, NULL },
+	{ "rope",	ROPE,		OBJECT, NULL },
+	{ "levis",	LEVIS,		OBJECT, NULL },
+	{ "pants",	LEVIS,		OBJECT, NULL },
+	{ "mace",	MACE,		OBJECT, NULL },
+	{ "shovel",	SHOVEL,		OBJECT, NULL },
+	{ "halberd",	HALBERD,	OBJECT, NULL },
+	{ "compass",	COMPASS,	OBJECT, NULL },
+	{ "elf",	ELF,		OBJECT, NULL },
+	{ "coins",	COINS,		OBJECT, NULL },
+	{ "matches",	MATCHES,	OBJECT, NULL },
+	{ "match",	MATCHES,	OBJECT, NULL },
+	{ "book",	MATCHES,	OBJECT, NULL },
+	{ "man",	MAN,		NOUNS, NULL },
+	{ "papayas",	PAPAYAS,	OBJECT, NULL },
+	{ "pineapple",	PINEAPPLE,	OBJECT, NULL },
+	{ "kiwi",	KIWI,		OBJECT, NULL },
+	{ "coconuts",	COCONUTS,	OBJECT, NULL },
+	{ "mango",	MANGO,		OBJECT, NULL },
+	{ "ring",	RING,		OBJECT, NULL },
+	{ "potion",	POTION,		OBJECT, NULL },
+	{ "bracelet",	BRACELET,	OBJECT, NULL },
+	{ "timer",	TIMER,		NOUNS, NULL },
+	{ "bomb",	BOMB,		OBJECT, NULL },
+	{ "warhead",	BOMB,		OBJECT, NULL },
+	{ "girl",	NATIVE,		NOUNS, NULL },
+	{ "native",	NATIVE,		NOUNS, NULL },
+	{ "horse",	HORSE,		OBJECT, NULL },
+	{ "stallion",	HORSE,		OBJECT, NULL },
+	{ "car",	CAR,		OBJECT, NULL },
+	{ "volare",	CAR,		OBJECT, NULL },
+	{ "pot",	POT,		OBJECT, NULL },
+	{ "jewels",	POT,		OBJECT, NULL },
+	{ "bar",	BAR,		OBJECT, NULL },
+	{ "diamond",	BLOCK,		OBJECT, NULL },
+	{ "block",	BLOCK,		OBJECT, NULL },
+	{ "up",		UP,		VERB, NULL },
+	{ "u",		UP,		VERB, NULL },
+	{ "down",	DOWN,		VERB, NULL },
+	{ "d",		DOWN,		VERB, NULL },
+	{ "ahead",	AHEAD,		VERB, NULL },
+	{ "a",		AHEAD,		VERB, NULL },
+	{ "back",	BACK,		VERB, NULL },
+	{ "b",		BACK,		VERB, NULL },
+	{ "right",	RIGHT,		VERB, NULL },
+	{ "r",		RIGHT,		VERB, NULL },
+	{ "left",	LEFT,		VERB, NULL },
+	{ "l",		LEFT,		VERB, NULL },
+	{ "take",	TAKE,		VERB, NULL },
+	{ "get",	TAKE,		VERB, NULL },
+	{ "use",	USE,		VERB, NULL },
+	{ "look",	LOOK,		VERB, NULL },
+	{ "lo",		LOOK,		VERB, NULL },
+	{ "quit",	QUIT,		VERB, NULL },
+	{ "q",		QUIT,		VERB, NULL },
+	{ "su",		SU,		VERB, NULL },
+	{ "drop",	DROP,		VERB, NULL },
+	{ "draw",	DRAW,		VERB, NULL },
+	{ "pull",	DRAW,		VERB, NULL },
+	{ "carry",	DRAW,		VERB, NULL },
+	{ "wear",	WEARIT,		VERB, NULL },
+	{ "sheathe",	WEARIT,		VERB, NULL },
+	{ "put",	PUT,		VERB, NULL },
+	{ "buckle",	PUT,		VERB, NULL },
+	{ "strap",	PUT,		VERB, NULL },
+	{ "tie",	PUT,		VERB, NULL },
+	{ "inven",	INVEN,		VERB, NULL },
+	{ "i",		INVEN,		VERB, NULL },
+	{ "everything",	EVERYTHING,	OBJECT, NULL },
+	{ "all",	EVERYTHING,	OBJECT, NULL },
+	{ "and",	AND,		CONJ, NULL },
+	{ "kill",	KILL,		VERB, NULL },
+	{ "fight",	KILL,		VERB, NULL },
+	{ "ravage",	RAVAGE,		VERB, NULL },
+	{ "rape",	RAVAGE,		VERB, NULL },
+	{ "undress",	UNDRESS,	VERB, NULL },
+	{ "throw",	THROW,		VERB, NULL },
+	{ "launch",	LAUNCH,		VERB, NULL },
+	{ "land",	LANDIT,		VERB, NULL },
+	{ "light",	LIGHT,		VERB, NULL },
+	{ "strike",	LIGHT,		VERB, NULL },
+	{ "follow",	FOLLOW,		VERB, NULL },
+	{ "chase",	FOLLOW,		VERB, NULL },
+	{ "kiss",	KISS,		VERB, NULL },
+	{ "love",	LOVE,		VERB, NULL },
+	{ "fuck",	LOVE,		VERB, NULL },
+	{ "give",	GIVE,		VERB, NULL },
+	{ "smite",	SMITE,		VERB, NULL },
+	{ "attack",	SMITE,		VERB, NULL },
+	{ "swing",	SMITE,		VERB, NULL },
+	{ "stab",	SMITE,		VERB, NULL },
+	{ "slice",	SMITE,		VERB, NULL },
+	{ "cut",	SMITE,		VERB, NULL },
+	{ "hack",	SMITE,		VERB, NULL },
+	{ "shoot",	SHOOT,		VERB, NULL },
+	{ "blast",	SHOOT,		VERB, NULL },
+	{ "on",		ON,		PREPS, NULL },
+	{ "off",	OFF,		PREPS, NULL },
+	{ "time",	TIME,		VERB, NULL },
+	{ "sleep",	SLEEP,		VERB, NULL },
+	{ "dig",	DIG,		VERB, NULL },
+	{ "eat",	EAT,		VERB, NULL },
+	{ "swim",	SWIM,		VERB, NULL },
+	{ "drink",	DRINK,		VERB, NULL },
+	{ "door",	DOOR,		NOUNS, NULL },
+	{ "save",	SAVE,		VERB, NULL },
+	{ "ride",	RIDE,		VERB, NULL },
+	{ "mount",	RIDE,		VERB, NULL },
+	{ "drive",	DRIVE,		VERB, NULL },
+	{ "start",	DRIVE,		VERB, NULL },
+	{ "score",	SCORE,		VERB, NULL },
+	{ "points",	SCORE,		VERB, NULL },
+	{ "bury",	BURY,		VERB, NULL },
+	{ "jump",	JUMP,		VERB, NULL },
+	{ "kick",	KICK,		VERB, NULL },
+	{ "kerosene",	0,		ADJS, NULL },
+	{ "plumed",	0,		ADJS, NULL },
+	{ "ancient",	0,		ADJS, NULL },
+	{ "golden",	0,		ADJS, NULL },
+	{ "gold",	0,		ADJS, NULL },
+	{ "ostrich",	0,		ADJS, NULL },
+	{ "rusty",	0,		ADJS, NULL },
+	{ "old",	0,		ADJS, NULL },
+	{ "dented",	0,		ADJS, NULL },
+	{ "blue",	0,		ADJS, NULL },
+	{ "purple",	0,		ADJS, NULL },
+	{ "kingly",	0,		ADJS, NULL },
+	{ "the",	0,		ADJS, NULL },
+	{ "climb",	0,		ADJS, NULL },
+	{ "move",	0,		ADJS, NULL },
+	{ "make",	0,		ADJS, NULL },
+	{ "to",		0,		ADJS, NULL },
+	{ NULL,		0,		0, NULL }
 };
